add: restore api